# Jarvis-Pro

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CREDITS.md  Dev Mode Jarvis.bat  GETTING-STARTED.md  HANDOFF.md  README.md  REVIEW_LOG.md  Start Jarvis (Remote).bat  Start Jarvis.bat  biome.json  cli.py  launch.sh  mcp_http_server.py  mcp_server.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serve.py  start.sh  tui.py
.claude/: settings.json
agents/: __init__.py  base_agent.py  obsidian_agent.py  research_agent.py  seo_agent.py
apps/api/: vitest.config.ts
clients/: clients.json  schema.json
core/: __init__.py  config.py  logger.py  registry.py
docker/: .env.example  Dockerfile.jarvis  docker-compose.yml  librechat.yaml  setup_webui.py
docs/: index.md  remote-access.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
integrations/: __init__.py  anthropic_client.py  local_falcon.py  obsidian.py  tts.py
obsidian/: README.md
research/: __init__.py  harness.py  memory.py  sources.py  synthesizer.py
scripts/: build-package.mjs  configure_db.py  dev.mjs  diagnose_webui.py  normalize-eol.mjs  onboard_client.py  run_workflow.py  setup_anthropic.py
self_improvement/: __init__.py  evaluator.py  feedback_loop.py  optimizer.py
skills/: __init__.py  base.py  citation_audit.py  falcon_report.py  gbp_monitor.py  keyword_hygiene.py
skills-catalog/: catalog.json
tests/: test_evaluator.py  test_registry.py  test_research.py  test_servers.py  test_skills.py  test_tts.py
webapp/: app.py
(+305 files in other folders)
